flex and align-items still didn't fix it

--- a/W1\D2\02_Intro_To_CSS/Flags/style.css
+++ b/W1\D2\02_Intro_To_CSS/Flags/style.css
@@ -3,9 +3,8 @@
     background-color: rgb(0, 109, 160);
     width: 900px;
     height: 500px;
-    /* display: flex-wrap; */
-    /* justify-content: flex-end; */
-    /* flex: none; */
+    /* display: flex;
+    align-items: center; */
 }
 
 .pannel1 {
